--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 .RData
 .Ruserdata
 /coord_quality_score/www/genesys_coord_check_to_app_new.csv
+coord_quality_score/www/genesys_coord_check_to_app_new.csv
+coord_quality_score/www/genesys_coord_check_to_app_new.sqlite
